    - Update fr translation (Closes: #481648).  Thanks to Nicolas François.
    - Update pt translation (Closes: #480640).  Thanks to Pedro Ribeiro.
    - Update vi translation (Closes: #479750).  Thanks to Clytie Siddall.
    - Add zh_CN translation (Closes: #480174).  Thanks to LI Daobing (李道兵).
    - Update zh_CN translation.  Thanks to Ji ZhengYu.

 -- Roger Leigh <rleigh@debian.org>  Mon, 19 May 2008 23:27:21 +0100

schroot (1.2.0-1) unstable; urgency=low

  * New upstream stable release.
  * Add eu translation (Closes: #462164).
  * Updated pt translation (Closes: #464053).
  * debian/control:
    - libsbuild-dev is in section libdevel.
    - Add libboost-filesystem-dev to Build-Depends.
    - Bump Standards-Version to 3.7.3.
  * debian/libsbuild-doc.doc-base: Use section Programming/C++
  * Setup and exec scripts check for existence and validity of
    script-config file options, as well as script-config itself, and exit with
    an error status and message if incorrect (Closes: #462680).
  * Reading the configuration no longer uses O_NOFOLLOW (Closes: #476332).
    Thanks to Timothy G Abbott.
  * sbuild/sbuild-util.h: Add missing typecast to fix FTBFS on
    GNU/kFreeBSD (Closes: #465972).  Thanks to Petr Salinger.
  * Building with G++ 4.3 now works (Closes: #467457).
  * dchroot.1 manual page no longer specifies -d as a short option for
    directory; this is only used for --preserve-environment
    (Closes: #476815).
  * schroot-mount now creates the mountpoint is not existent
    (Closes: #469038).  Many thanks to Kees Cook for this patch.

 -- Roger Leigh <rleigh@debian.org>  Mon, 05 May 2008 00:09:41 +0100

schroot (1.1.6-1) unstable; urgency=low

  * New upstream development release.
  * Acknowledge NMU.  Thanks to Lucas Nussbaum for fixing the Boost
    library names following another incompatible change in Boost
    (Closes: #439215).
  * debian/control: Suggest lvm2 instead of lvm-common (Closes: #452263).
  * debian/copyright: